--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,12 @@
 {
   "manifest_version": 3,
   "name": "Proxy 24",
-  "version": "1.0",
+  "version": "2.0",
   "permissions": [
     "proxy",
     "storage",
     "webRequest",
+    "webRequestAuthProvider",
     "<all_urls>",
     "tabs"
   ],
